--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index..js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --testEnvironment=node --runInBand --detectOpenHandles --coverage ./tests",
+    "devStart": "nodemon index..js"
   },
   "author": "module",
   "license": "ISC",
@@ -20,6 +20,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
+    "mongodb-memory-server": "^8.13.0",
     "mongoose": "^7.3.2",
     "node-rest-client": "^3.1.1"
   }
